# manipulation

./: Important_commands.md  README.md
dual_franka_model/: CMakeLists.txt  package.xml
dual_franka_model/include/: controller.hpp  planner.hpp
dual_franka_model/launch/: sim.launch.py
dual_franka_model/mjcf/: mjx_panda_table.xml
dual_franka_model/src/: controller.cpp  mujoco_node.cpp  planner.cpp
